megacalculator/y.output
Nonterminals useless in grammar

    var
    string


Terminals unused in grammar

    POW
    ROOT
    COS
    SIN
    TAN
    FACT
    BASE
    SUM
    PROD
    ABS
    MOD
    NEP
    PI
    BC
    PN
    FOR


Rules useless in grammar

   59 var: declaration
   60    | string

   61 string: '*' ID '*'


Grammar

    0 $accept: startProgram $end

    1 startProgram: op '\n'
    2             | startProgram op '\n'

    3 op: declaration
    4   | type
    5   | type ID '=' declaration
    6   | declaration SMALLER declaration
    7   | declaration GREATER declaration
    8   | declaration EQUAL declaration
    9   | declaration DIFFERENT declaration
   10   | declaration SMALLEREQUAL declaration
   11   | declaration GREATEREQUAL declaration
   12   | block
   13   | EXIT

   14 block: WHILE '(' cond ')' op '\n'
   15      | IF '(' cond ')' op '\n'
   16      | IF '(' cond ')' op ELSE op '\n'

   17 type: INT
   18     | FLOAT
   19     | STRING

   20 cond: scond
   21     | scond logop cond

   22 scond: nid relop nid

   23 nid: ID
   24    | VALUE

   25 logop: AND
   26      | OR

   27 relop: DIFFERENT
   28      | EQUAL
   29      | SMALLEREQUAL
   30      | SMALLER
   31      | GREATER
   32      | GREATEREQUAL

   33 declaration: '(' declaration ')'
   34            | declaration '+' declaration
   35            | declaration '-' declaration
   36            | declaration '*' declaration
   37            | declaration '/' declaration
   38            | declaration '^' declaration
   39            | declaration '!'
   40            | '-' declaration
   41            | VALUE
   42            | ID
   43            | ID INC
   44            | ID DEC
   45            | declaration INC
   46            | declaration DEC
   47            | FIB '(' declaration ')'
   48            | SIGMA '(' declaration ',' declaration ')'
   49            | GCD '(' declaration ',' declaration ')'
   50            | AVG '(' declaration ',' declaration ')'
   51            | LOG '(' declaration ')'
   52            | CEIL '(' declaration ')'
   53            | FLOOR '(' declaration ')'
   54            | ERA '(' declaration ')'
   55            | BIN '(' declaration ',' declaration ')'
   56            | RAND '(' declaration ',' declaration ',' declaration ')'
   57            | PRIME '(' declaration ')'
   58            | PRIMF '(' declaration ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2 14 15 16
    '!' (33) 39
    '(' (40) 14 15 16 33 47 48 49 50 51 52 53 54 55 56 57 58
    ')' (41) 14 15 16 33 47 48 49 50 51 52 53 54 55 56 57 58
    '*' (42) 36
    '+' (43) 34
    ',' (44) 48 49 50 55 56
    '-' (45) 35 40
    '/' (47) 37
    '=' (61) 5
    '^' (94) 38
    error (256)
    VALUE <value> (258) 24 41
    ID <lex> (259) 5 23 42 43 44
    POW (260)
    ROOT (261)
    LOG (262) 51
    COS (263)
    SIN (264)
    TAN (265)
    FIB (266) 47
    FACT (267)
    BASE (268)
    SUM (269)
    PROD (270)
    ABS (271)
    MOD (272)
    NEP (273)
    PI (274)
    SMALLER (275) 6 30
    GREATER (276) 7 31
    EQUAL (277) 8 28
    DIFFERENT (278) 9 27
    SMALLEREQUAL (279) 10 29
    GREATEREQUAL (280) 11 32
    RAND (281) 56
    SIGMA (282) 48
    ERA (283) 54
    PRIME (284) 57
    PRIMF (285) 58
    GCD (286) 49
    BC (287)
    PN (288)
    AVG (289) 50
    CEIL (290) 52
    FLOOR (291) 53
    FOR (292)
    WHILE (293) 14
    IF (294) 15 16
    ELSE (295) 16
    OR (296) 26
    INC (297) 43 45
    DEC (298) 44 46
    AND (299) 25
    EXIT (300) 13
    BIN (301) 55
    FLOAT (302) 18
    INT (303) 17
    STRING (304) 19


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    startProgram (62)
        on left: 1 2
        on right: 0 2
    op (63)
        on left: 3 4 5 6 7 8 9 10 11 12 13
        on right: 1 2 14 15 16
    block (64)
        on left: 14 15 16
        on right: 12
    type <lex> (65)
        on left: 17 18 19
        on right: 4 5
    cond (66)
        on left: 20 21
        on right: 14 15 16 21
    scond (67)
        on left: 22
        on right: 20 21
    nid (68)
        on left: 23 24
        on right: 22
    logop (69)
        on left: 25 26
        on right: 21
    relop (70)
        on left: 27 28 29 30 31 32
        on right: 22
    declaration <value> (71)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
        on right: 3 5 6 7 8 9 10 11 33 34 35 36 37 38 39 40 45 46 47 48 49 50 51 52 53 54 55 56 57 58


State 0

    0 $accept: . startProgram $end

    VALUE   shift, and go to state 1
    ID      shift, and go to state 2
    LOG     shift, and go to state 3
    FIB     shift, and go to state 4
    RAND    shift, and go to state 5
    SIGMA   shift, and go to state 6
    ERA     shift, and go to state 7
    PRIME   shift, and go to state 8
    PRIMF   shift, and go to state 9
    GCD     shift, and go to state 10
    AVG     shift, and go to state 11
    CEIL    shift, and go to state 12
    FLOOR   shift, and go to state 13
    WHILE   shift, and go to state 14
    IF      shift, and go to state 15
    EXIT    shift, and go to state 16
    BIN     shift, and go to state 17
    FLOAT   shift, and go to state 18
    INT     shift, and go to state 19
    STRING  shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    startProgram  go to state 23
    op            go to state 24
    block         go to state 25
    type          go to state 26
    declaration   go to state 27


State 1

   41 declaration: VALUE .

    $default  reduce using rule 41 (declaration)


State 2

   42 declaration: ID .
   43            | ID . INC
   44            | ID . DEC

    INC  shift, and go to state 28
    DEC  shift, and go to state 29

    $default  reduce using rule 42 (declaration)


State 3

   51 declaration: LOG . '(' declaration ')'

    '('  shift, and go to state 30


State 4

   47 declaration: FIB . '(' declaration ')'

    '('  shift, and go to state 31


State 5

   56 declaration: RAND . '(' declaration ',' declaration ',' declaration ')'

    '('  shift, and go to state 32


State 6

   48 declaration: SIGMA . '(' declaration ',' declaration ')'

    '('  shift, and go to state 33


State 7

   54 declaration: ERA . '(' declaration ')'

    '('  shift, and go to state 34


State 8

   57 declaration: PRIME . '(' declaration ')'

    '('  shift, and go to state 35


State 9

   58 declaration: PRIMF . '(' declaration ')'

    '('  shift, and go to state 36


State 10

   49 declaration: GCD . '(' declaration ',' declaration ')'

    '('  shift, and go to state 37


State 11

   50 declaration: AVG . '(' declaration ',' declaration ')'

    '('  shift, and go to state 38


State 12

   52 declaration: CEIL . '(' declaration ')'

    '('  shift, and go to state 39


State 13

   53 declaration: FLOOR . '(' declaration ')'

    '('  shift, and go to state 40


State 14

   14 block: WHILE . '(' cond ')' op '\n'

    '('  shift, and go to state 41


State 15

   15 block: IF . '(' cond ')' op '\n'
   16      | IF . '(' cond ')' op ELSE op '\n'

    '('  shift, and go to state 42


State 16

   13 op: EXIT .

    $default  reduce using rule 13 (op)


State 17

   55 declaration: BIN . '(' declaration ',' declaration ')'

    '('  shift, and go to state 43


State 18

   18 type: FLOAT .

    $default  reduce using rule 18 (type)


State 19

   17 type: INT .

    $default  reduce using rule 17 (type)


State 20

   19 type: STRING .

    $default  reduce using rule 19 (type)


State 21

   40 declaration: '-' . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 44


State 22

   33 declaration: '(' . declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 45


State 23

    0 $accept: startProgram . $end
    2 startProgram: startProgram . op '\n'

    $end    shift, and go to state 46
    VALUE   shift, and go to state 1
    ID      shift, and go to state 2
    LOG     shift, and go to state 3
    FIB     shift, and go to state 4
    RAND    shift, and go to state 5
    SIGMA   shift, and go to state 6
    ERA     shift, and go to state 7
    PRIME   shift, and go to state 8
    PRIMF   shift, and go to state 9
    GCD     shift, and go to state 10
    AVG     shift, and go to state 11
    CEIL    shift, and go to state 12
    FLOOR   shift, and go to state 13
    WHILE   shift, and go to state 14
    IF      shift, and go to state 15
    EXIT    shift, and go to state 16
    BIN     shift, and go to state 17
    FLOAT   shift, and go to state 18
    INT     shift, and go to state 19
    STRING  shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    op           go to state 47
    block        go to state 25
    type         go to state 26
    declaration  go to state 27


State 24

    1 startProgram: op . '\n'

    '\n'  shift, and go to state 48


State 25

   12 op: block .

    $default  reduce using rule 12 (op)


State 26

    4 op: type .
    5   | type . ID '=' declaration

    ID  shift, and go to state 49

    $default  reduce using rule 4 (op)


State 27

    3 op: declaration .
    6   | declaration . SMALLER declaration
    7   | declaration . GREATER declaration
    8   | declaration . EQUAL declaration
    9   | declaration . DIFFERENT declaration
   10   | declaration . SMALLEREQUAL declaration
   11   | declaration . GREATEREQUAL declaration
   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC

    SMALLER       shift, and go to state 50
    GREATER       shift, and go to state 51
    EQUAL         shift, and go to state 52
    DIFFERENT     shift, and go to state 53
    SMALLEREQUAL  shift, and go to state 54
    GREATEREQUAL  shift, and go to state 55
    INC           shift, and go to state 56
    DEC           shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '*'           shift, and go to state 60
    '/'           shift, and go to state 61
    '^'           shift, and go to state 62
    '!'           shift, and go to state 63

    $default  reduce using rule 3 (op)


State 28

   43 declaration: ID INC .

    $default  reduce using rule 43 (declaration)


State 29

   44 declaration: ID DEC .

    $default  reduce using rule 44 (declaration)


State 30

   51 declaration: LOG '(' . declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 64


State 31

   47 declaration: FIB '(' . declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 65


State 32

   56 declaration: RAND '(' . declaration ',' declaration ',' declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 66


State 33

   48 declaration: SIGMA '(' . declaration ',' declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 67


State 34

   54 declaration: ERA '(' . declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 68


State 35

   57 declaration: PRIME '(' . declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 69


State 36

   58 declaration: PRIMF '(' . declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 70


State 37

   49 declaration: GCD '(' . declaration ',' declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 71


State 38

   50 declaration: AVG '(' . declaration ',' declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 72


State 39

   52 declaration: CEIL '(' . declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 73


State 40

   53 declaration: FLOOR '(' . declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 74


State 41

   14 block: WHILE '(' . cond ')' op '\n'

    VALUE  shift, and go to state 75
    ID     shift, and go to state 76

    cond   go to state 77
    scond  go to state 78
    nid    go to state 79


State 42

   15 block: IF '(' . cond ')' op '\n'
   16      | IF '(' . cond ')' op ELSE op '\n'

    VALUE  shift, and go to state 75
    ID     shift, and go to state 76

    cond   go to state 80
    scond  go to state 78
    nid    go to state 79


State 43

   55 declaration: BIN '(' . declaration ',' declaration ')'

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 81


State 44

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   40            | '-' declaration .
   45            | declaration . INC
   46            | declaration . DEC

    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63

    $default  reduce using rule 40 (declaration)


State 45

   33 declaration: '(' declaration . ')'
   34            | declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ')'  shift, and go to state 82


State 46

    0 $accept: startProgram $end .

    $default  accept


State 47

    2 startProgram: startProgram op . '\n'

    '\n'  shift, and go to state 83


State 48

    1 startProgram: op '\n' .

    $default  reduce using rule 1 (startProgram)


State 49

    5 op: type ID . '=' declaration

    '='  shift, and go to state 84


State 50

    6 op: declaration SMALLER . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 85


State 51

    7 op: declaration GREATER . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 86


State 52

    8 op: declaration EQUAL . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 87


State 53

    9 op: declaration DIFFERENT . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 88


State 54

   10 op: declaration SMALLEREQUAL . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 89


State 55

   11 op: declaration GREATEREQUAL . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 90


State 56

   45 declaration: declaration INC .

    $default  reduce using rule 45 (declaration)


State 57

   46 declaration: declaration DEC .

    $default  reduce using rule 46 (declaration)


State 58

   34 declaration: declaration '+' . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 91


State 59

   35 declaration: declaration '-' . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 92


State 60

   36 declaration: declaration '*' . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 93


State 61

   37 declaration: declaration '/' . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 94


State 62

   38 declaration: declaration '^' . declaration

    VALUE  shift, and go to state 1
    ID     shift, and go to state 2
    LOG    shift, and go to state 3
    FIB    shift, and go to state 4
    RAND   shift, and go to state 5
    SIGMA  shift, and go to state 6
    ERA    shift, and go to state 7
    PRIME  shift, and go to state 8
    PRIMF  shift, and go to state 9
    GCD    shift, and go to state 10
    AVG    shift, and go to state 11
    CEIL   shift, and go to state 12
    FLOOR  shift, and go to state 13
    BIN    shift, and go to state 17
    '-'    shift, and go to state 21
    '('    shift, and go to state 22

    declaration  go to state 95


State 63

   39 declaration: declaration '!' .

    $default  reduce using rule 39 (declaration)


State 64

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC
   51            | LOG '(' declaration . ')'

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ')'  shift, and go to state 96


State 65

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC
   47            | FIB '(' declaration . ')'

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ')'  shift, and go to state 97


State 66

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC
   56            | RAND '(' declaration . ',' declaration ',' declaration ')'

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ','  shift, and go to state 98


State 67

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC
   48            | SIGMA '(' declaration . ',' declaration ')'

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ','  shift, and go to state 99


State 68

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC
   54            | ERA '(' declaration . ')'

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ')'  shift, and go to state 100


State 69

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC
   57            | PRIME '(' declaration . ')'

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ')'  shift, and go to state 101


State 70

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC
   58            | PRIMF '(' declaration . ')'

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ')'  shift, and go to state 102


State 71

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC
   49            | GCD '(' declaration . ',' declaration ')'

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ','  shift, and go to state 103


State 72

   34 declaration: declaration . '+' declaration
   35            | declaration . '-' declaration
   36            | declaration . '*' declaration
   37            | declaration . '/' declaration
   38            | declaration . '^' declaration
   39            | declaration . '!'
   45            | declaration . INC
   46            | declaration . DEC
   50            | AVG '(' declaration . ',' declaration ')'

    INC  shift, and go to state 56
    DEC  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    ','  shift, and go to state 104


State 73
